<resources>
    <string name="main_name">Main模块</string>

    <string name="main_splash_text">倒计时3S</string>
    <string name="main_close">关闭</string>

    <string name="main_test">测试</string>

    <string name="main_homepage">项目主页</string>
    <string name="main_scan">扫码下载</string>
    <string name="main_collect">我的收藏</string>
    <string name="main_exit">退出应用</string>

    <string name="main_web_back">返回</string>

    <string name="main_menu_web1">刷新</string>
    <string name="main_menu_web2">分享</string>
    <string name="main_menu_web3">复制链接</string>
    <string name="main_menu_web4">浏览器打开</string>
    <string name="main_menu_web5">添加到收藏</string>

    <string name="main_scan_title">扫码下载</string>
    <string name="main_scan_star">如果感到还不错的话,请给一个star吧,同时欢迎去GitHub上给出issues,我们将继续迭代，增加更多功能，O(∩_∩)O ~</string>
    <string name="main_scan_tip">请使用微信,浏览器等扫描二维码或者长按图中二维码，即可下载安装哦</string>

    <string name="main_collect_tip">这些都是你喜欢的的,快看看吧</string>

    <string name="main_link_edit">编辑</string>
    <string name="main_link_input_name">请输入网址名称</string>
    <string name="main_link_input_url">请输入网址链接</string>
    <string name="main_link_finish">编辑完成</string>
    <string name="main_link_cancel">取消</string>

    <string name="main_search_input">请输入关键字</string>
    <string name="main_search_text">搜索</string>
    <string name="main_search_hot_tip">热门搜索</string>
    <string name="main_search_history_tip">历史搜索</string>
    <string name="main_search_click_to_speak">点击开始说话</string>

</resources>