<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.hjc.library_widget.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/base_color"
            app:leftImage="@mipmap/main_icon_back"
            app:titleColor="@color/base_white"
            app:titleSize="20sp"
            app:titleText="@string/main_scan_title">

        </com.hjc.library_widget.bar.TitleBar>


        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/main_shape_et_bg_gray"
            android:padding="10dp"
            android:text="@string/main_scan_tip"
            android:textColor="@color/base_gray_dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bar" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tip" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/main_scan_star"
            android:textColor="@color/base_black_33"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>