<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="drawerViewModel"
            type="com.hjc.learn.main.viewmodel.drawer.DrawerViewModel" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fl_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{onClickListener}">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/main_img_drawer_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/main_logo" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{drawerViewModel.usernameData}"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/base_white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_home_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="@{onClickListener}"
                android:padding="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/main_icon_nav_homepage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/main_homepage"
                    android:textColor="@color/base_black_33" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="@{onClickListener}"
                android:padding="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/main_icon_nav_scan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/main_scan"
                    android:textColor="@color/base_black_33" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="@{onClickListener}"
                android:padding="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/main_icon_nav_collect" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/main_collect"
                    android:textColor="@color/base_black_33" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="@{onClickListener}"
                android:padding="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/main_icon_nav_exit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/main_exit"
                    android:textColor="@color/base_black_33" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>